fixed skills height on mobile view

--- a/src/components/About/AboutSection.css
+++ b/src/components/About/AboutSection.css
@@ -95,10 +95,6 @@
     margin-bottom: 3rem;
   }
 
-  .about-section {
-    height: 1200px;
-  }
-
   .skill-summary {
     padding: 0;
   }
